--- a/MyHome/app/src/main/res/layout/fragment_login.xml
+++ b/MyHome/app/src/main/res/layout/fragment_login.xml
@@ -11,160 +11,168 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:theme="@style/textInputLayoutStyle"
-        tools:context="com.dignityhealth.myhome.features.login.LoginActivity">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/login_logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="32dp"
-            android:layout_marginTop="60dp"
-            android:src="@mipmap/home_logo" />
-
-        <RelativeLayout
-            android:id="@+id/email_login_form"
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/web_view_redirect"
-            android:focusableInTouchMode="true"
-            android:orientation="vertical">
+            android:layout_above="@+id/enroll_now">
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/email_layout"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/password_layout"
-                app:errorTextAppearance="@style/error_appearance"
-                app:hintTextAppearance="@style/hint_appearance">
+                android:layout_height="match_parent"
+                android:gravity="center_horizontal"
+                android:orientation="vertical"
+                android:theme="@style/textInputLayoutStyle"
+                tools:context="com.dignityhealth.myhome.features.login.LoginActivity">
 
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/email"
+                <ImageView
+                    android:id="@+id/login_logo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="32dp"
+                    android:layout_marginTop="52dp"
+                    android:src="@mipmap/new_logo" />
+
+                <RelativeLayout
+                    android:id="@+id/email_login_form"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@+id/login_logo"
+                    android:focusableInTouchMode="true"
+                    android:orientation="vertical">
+
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/email_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:errorTextAppearance="@style/error_appearance"
+                        app:hintTextAppearance="@style/hint_appearance">
+
+                        <android.support.design.widget.TextInputEditText
+                            android:id="@+id/email"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="16dp"
+                            android:layout_marginLeft="52dp"
+                            android:layout_marginRight="52dp"
+                            android:hint="@string/prompt_email"
+                            android:imeOptions="actionNext"
+                            android:inputType="textEmailAddress"
+                            android:maxLines="1"
+                            android:paddingLeft="10dp"
+                            android:paddingRight="10dp"
+                            android:textSize="18sp"
+                            tools:ignore="HardcodedText" />
+                    </android.support.design.widget.TextInputLayout>
+
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/password_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/email_layout"
+                        app:errorTextAppearance="@style/error_appearance"
+                        app:hintTextAppearance="@style/hint_appearance"
+                        app:passwordToggleEnabled="true"
+                        app:passwordToggleTint="@color/primary">
+
+                        <android.support.design.widget.TextInputEditText
+                            android:id="@+id/password"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_above="@+id/log_in_button"
+                            android:layout_marginBottom="36dp"
+                            android:layout_marginLeft="52dp"
+                            android:layout_marginRight="52dp"
+                            android:drawableRight="@mipmap/show_password"
+                            android:hint="@string/prompt_password"
+                            android:imeOptions="actionDone"
+                            android:inputType="textPassword"
+                            android:maxLines="1"
+                            android:paddingLeft="10dp"
+                            android:paddingRight="10dp"
+                            android:textSize="18sp"
+                            tools:ignore="HardcodedText" />
+                    </android.support.design.widget.TextInputLayout>
+
+                    <Button
+                        android:id="@+id/log_in_button"
+                        style="@style/grayButtonStyle"
+                        android:layout_width="match_parent"
+                        android:layout_below="@+id/password_layout"
+                        android:layout_marginBottom="48dp"
+                        android:layout_marginLeft="52dp"
+                        android:layout_marginRight="52dp"
+                        android:onClick="@{handlers::onClickEvent}"
+                        android:text="@string/action_Login"
+                        android:textAllCaps="false"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/forgot_password"
+                        style="@style/tradeGothicLTStdLight_14"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/log_in_button"
+                        android:layout_centerHorizontal="true"
+                        android:onClick="@{handlers::onClickEvent}"
+                        android:paddingLeft="8dp"
+                        android:paddingRight="8dp"
+                        android:paddingTop="8dp"
+                        android:text="@string/forgot_password"
+                        android:textAlignment="center"
+                        android:textColor="@color/primary"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/login_help"
+                        style="@style/tradeGothicLTStdLight_14"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/forgot_password"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginBottom="16dp"
+                        android:onClick="@{handlers::onClickEvent}"
+                        android:padding="16dp"
+                        android:text="@string/login_help"
+                        android:textAlignment="center"
+                        android:textColor="@color/primary"
+                        android:textSize="18sp" />
+                </RelativeLayout>
+
+                <WebView
+                    android:id="@+id/web_view_redirect"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="52dp"
-                    android:layout_marginRight="52dp"
-                    android:hint="@string/prompt_email"
-                    android:imeOptions="actionNext"
-                    android:inputType="textEmailAddress"
-                    android:maxLines="1"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    android:textSize="18sp"
-                    tools:ignore="HardcodedText" />
-            </android.support.design.widget.TextInputLayout>
+                    android:visibility="gone" />
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/password_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/log_in_button"
-                app:errorTextAppearance="@style/error_appearance"
-                app:hintTextAppearance="@style/hint_appearance"
-                app:passwordToggleEnabled="true"
-                app:passwordToggleTint="@color/primary">
-
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/password"
-                    android:layout_width="match_parent"
+                <!-- Login progress -->
+                <ProgressBar
+                    android:id="@+id/login_progress"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_above="@+id/log_in_button"
-                    android:layout_marginBottom="36dp"
-                    android:layout_marginLeft="52dp"
-                    android:layout_marginRight="52dp"
-                    android:drawableRight="@mipmap/show_password"
-                    android:hint="@string/prompt_password"
-                    android:imeOptions="actionDone"
-                    android:inputType="textPassword"
-                    android:maxLines="1"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    android:textSize="18sp"
-                    tools:ignore="HardcodedText" />
-            </android.support.design.widget.TextInputLayout>
+                    android:layout_centerInParent="true"
+                    android:layout_marginBottom="8dp"
+                    android:indeterminate="true"
+                    android:visibility="gone" />
+            </RelativeLayout>
+        </ScrollView>
 
-            <Button
-                android:id="@+id/log_in_button"
-                style="@style/grayButtonStyle"
-                android:layout_width="match_parent"
-                android:layout_above="@+id/forgot_password"
-                android:layout_marginBottom="48dp"
-                android:layout_marginLeft="52dp"
-                android:layout_marginRight="52dp"
-                android:onClick="@{handlers::onClickEvent}"
-                android:text="@string/action_Login"
-                android:textAllCaps="false"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/forgot_password"
-                style="@style/tradeGothicLTStdLight_14"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/login_help"
-                android:layout_centerHorizontal="true"
-                android:onClick="@{handlers::onClickEvent}"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp"
-                android:paddingTop="8dp"
-                android:text="@string/forgot_password"
-                android:textAlignment="center"
-                android:textColor="@color/primary"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/login_help"
-                style="@style/tradeGothicLTStdLight_14"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/enroll_now"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="16dp"
-                android:onClick="@{handlers::onClickEvent}"
-                android:padding="16dp"
-                android:text="@string/login_help"
-                android:textAlignment="center"
-                android:textColor="@color/primary"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/enroll_now"
-                style="@style/tradeGothicLTStdLight_14"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:background="@color/primary"
-                android:onClick="@{handlers::onClickEvent}"
-                android:padding="16dp"
-                android:text="@string/enroll_now"
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                android:textSize="18sp" />
-        </RelativeLayout>
-
-
-        <WebView
-            android:id="@+id/web_view_redirect"
+        <TextView
+            android:id="@+id/enroll_now"
+            style="@style/tradeGothicLTStdLight_14"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone" />
-
-        <!-- Login progress -->
-        <ProgressBar
-            android:id="@+id/login_progress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginBottom="8dp"
-            android:indeterminate="true"
-            android:visibility="gone" />
+            android:layout_alignParentBottom="true"
+            android:background="@color/primary"
+            android:onClick="@{handlers::onClickEvent}"
+            android:padding="16dp"
+            android:text="@string/enroll_now"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
     </RelativeLayout>
-
 </layout>
