--- a/MyHome/app/src/main/res/layout/home.xml
+++ b/MyHome/app/src/main/res/layout/home.xml
@@ -25,7 +25,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="11dp"
                     android:layout_marginStart="10dp"
-                    android:gravity="center"
+                    android:gravity="left"
                     android:text="Welcome home!"
                     android:textStyle="bold"
                     tools:ignore="HardcodedText" />
