--- a/MyHome/app/src/main/res/layout/book_select_person.xml
+++ b/MyHome/app/src/main/res/layout/book_select_person.xml
@@ -23,6 +23,7 @@
         android:layout_marginTop="18dp"
         android:gravity="center"
         android:text="@string/me"
+        android:textSize="18sp"
         android:textStyle="bold" />
 
     <Button
@@ -33,6 +34,7 @@
         android:layout_marginTop="18dp"
         android:gravity="center"
         android:text="@string/family_member"
+        android:textSize="18sp"
         android:textStyle="bold" />
 
 </LinearLayout>
