--- a/MyHome/app/src/main/res/layout/book_select_status.xml
+++ b/MyHome/app/src/main/res/layout/book_select_status.xml
@@ -24,6 +24,7 @@
         android:layout_marginTop="18dp"
         android:gravity="center"
         android:text="@string/yes"
+        android:textSize="18sp"
         android:textStyle="bold" />
 
     <Button
@@ -34,6 +35,7 @@
         android:layout_marginTop="18dp"
         android:gravity="center"
         android:text="@string/no"
+        android:textSize="18sp"
         android:textStyle="bold" />
 
     <TextView
