--- a/MyHome/app/src/main/res/layout/fragment_fad.xml
+++ b/MyHome/app/src/main/res/layout/fragment_fad.xml
@@ -85,7 +85,8 @@
 
         <android.support.design.widget.TabLayout
             android:id="@+id/fadTabs"
-            style="@style/tradeGothicLTStdLight_14"
+            style="@style/customTabLayout"
+            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/toolbarLayout"
