--- a/MyHome/app/src/main/res/values-v21/styles.xml
+++ b/MyHome/app/src/main/res/values-v21/styles.xml
@@ -16,4 +16,9 @@
         <item name="android:windowSharedElementEnterTransition">@android:transition/move</item>
         <item name="android:windowSharedElementExitTransition">@android:transition/move</item>
     </style>
+
+
+    <style name="DialogTheame" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:statusBarColor">@color/black</item>
+    </style>
 </resources>
