--- a/MyHome/app/src/main/res/layout/book_dialog_insurance.xml
+++ b/MyHome/app/src/main/res/layout/book_dialog_insurance.xml
@@ -10,9 +10,9 @@
         android:layout_height="match_parent"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:paddingTop="18dp"
         android:paddingLeft="18dp"
-        android:paddingRight="18dp">
+        android:paddingRight="18dp"
+        android:paddingTop="18dp">
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/provider_layout"
@@ -67,6 +67,27 @@
                 android:ellipsize="end"
                 android:hint="@string/group_id"
                 android:inputType="text"
+                android:maxLines="1" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/insurance_phone_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:errorEnabled="true"
+            app:errorTextAppearance="@style/error_appearance"
+            app:hintTextAppearance="@style/hint_appearance">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/insurance_phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:ems="10"
+                android:hint="Insurance Phone Number"
+                android:inputType="phone"
+                android:maxLength="14"
                 android:maxLines="1" />
 
         </android.support.design.widget.TextInputLayout>
