--- a/MyHome/app/src/main/res/layout/stats_profile.xml
+++ b/MyHome/app/src/main/res/layout/stats_profile.xml
@@ -19,7 +19,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="18dp">
+        android:layout_marginTop="18dp"
+        android:baselineAligned="false">
 
         <LinearLayout
             android:layout_width="0dp"
@@ -76,7 +77,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="18dp">
+        android:layout_marginTop="18dp"
+        android:baselineAligned="false">
 
         <LinearLayout
             android:layout_width="0dp"
