--- a/MyHome/app/src/main/res/values-v21/styles.xml
+++ b/MyHome/app/src/main/res/values-v21/styles.xml
@@ -10,7 +10,7 @@
         <item name="colorAccent">@color/accent</item>
 
         <item name="android:windowContentTransitions">true</item>
-
+        <item name="android:actionMenuTextColor">@color/accent</item>
         <item name="android:windowAllowEnterTransitionOverlap">true</item>
         <item name="android:windowAllowReturnTransitionOverlap">true</item>
         <item name="android:windowSharedElementEnterTransition">@android:transition/move</item>
