--- a/MyHome/app/src/main/res/values/styles.xml
+++ b/MyHome/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
         <item name="colorControlActivated">@color/accent</item>
         <item name="colorControlHighlight">@color/accent</item>
         <item name="colorControlNormal">@color/accent</item>
+        <item name="android:actionMenuTextColor">@color/accent</item>
         <item name="colorAccent">@color/accent</item>
     </style>
 
