--- a/MyHome/app/src/main/res/layout/home.xml
+++ b/MyHome/app/src/main/res/layout/home.xml
@@ -79,27 +79,25 @@
                         android:visibility="gone"
                         tools:ignore="HardcodedText" />
                 </RelativeLayout>
-               <RelativeLayout
-                   android:layout_width="match_parent"
-                   android:layout_height="38dp"
-                   android:layout_marginEnd="11dp"
-                   android:layout_marginStart="12dp"
-                   android:layout_marginTop="14dp"
-                   >
+
                 <TextView
                     android:id="@+id/txt_db_appoint_content"
                     style="@style/tradeGothicLTStdLight_16"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
+                    android:layout_marginEnd="12dp"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="14dp"
+                    android:layout_marginBottom="14dp"
                     android:gravity="center"
                     android:lineSpacingExtra="2sp"
                     android:text="No appointments scheduled"
                     android:textColor="@color/db_gunmetal"
                     android:textSize="16sp"
                     tools:ignore="HardcodedText" />
-               </RelativeLayout>
+
                 <View
                     style="@style/dbDivider"
                     android:layout_marginEnd="2dp"
@@ -203,7 +201,7 @@
                     android:layout_marginTop="18dp"
                     android:letterSpacing="-0.01"
                     android:text="@string/book_an_appointment" />
-                    android:stateListAnimator="@null"/>
+                android:stateListAnimator="@null"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -244,12 +242,12 @@
                     android:ellipsize="end"
                     android:hint="Seach for a doctor, speciality or condition"
                     android:imeOptions="actionSearch"
-                    android:stateListAnimator="@null"
                     android:inputType="text"
                     android:lineSpacingExtra="5sp"
                     android:paddingLeft="6dp"
                     android:paddingRight="6dp"
                     android:paddingStart="10dp"
+                    android:stateListAnimator="@null"
                     android:textColorHint="@color/db_gunmetal" />
 
                 <LinearLayout
