--- a/MyHome/app/src/main/res/layout/book_dialog_personal.xml
+++ b/MyHome/app/src/main/res/layout/book_dialog_personal.xml
@@ -259,9 +259,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:baselineAligned="false"
             android:orientation="horizontal"
-            android:weightSum="1"
-            android:baselineAligned="false">
+            android:weightSum="1">
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/zip_layout"
@@ -428,7 +428,8 @@
                 android:background="@drawable/edit_text_boarder_grey"
                 android:gravity="left"
                 android:hint="@string/booking_reason_hint"
-                android:inputType="textCapWords|textMultiLine" />
+                android:inputType="textCapWords|textMultiLine"
+                android:maxLength="350" />
 
         </android.support.design.widget.TextInputLayout>
 
